objects/Track_Id_to_Delete__c.object
<CustomObject>
    <fields>
        <fullName>Obj_Id__c</fullName>
        <label>Obj Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obj_Name__c</fullName>
        <label>Obj Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Track Id to Delete</label>
    <nameField>
        <label>Track Ids to Delete Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Track Ids to Delete</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>